title added and general cleanup

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <section id="one">
             <header class="major">
               
-                <h2>Hanna Schmück </h2>
+                <h2>Dr. Hanna Schmück </h2>
             </header>
 
           
