--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,8 @@
     <header id="header">
         <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
                     alt="" /></a>
-            <h1><strong>Research Associate | The University of Augsburg </strong><br />
+            <h1><strong>Dr. Hanna Schmück<br>
+              Research Associate | The University of Augsburg </strong><br />
                 <br /> </h1>
         </div>
     </header> <!-- Main -->
@@ -51,6 +52,12 @@
           <hr class="rounded">
           
           <h2>In press</h2>
+          <h2>Proceedings</h2>
+          <div class="apa">Schmück, H., Reder, M., Paula, K., & Friedrich, A. (2025, September 4-5). A case study on annotating and analysing situation entity types in Reddit discussions on democracy. In Proceedings of the 12th International Conference on CMC and Social Media Corpora for the Humanities (CMC-Corpora). University of Bayreuth. [in press] </div>
+          <h2>Book Chapters</h2>
+          <div class="apa">Brezina, V & Schmück, H. Corpus Linguistics and Learner Corpus Studies. In Nesi, H & Milin, P (Eds.) International Encyclopedia of Language and Linguistics (3rd ed.). Elsevier. [in press, expected publication date March 2026]</div>
+          <hr class="rounded">
+          
           <h2>Journal Articles</h2>
           <div class="apa">Schmück, H. Review of Buschfeld, Ronan, Neumaier, Weilinghoff & Westermayer (2023): Crossing Boundaries Through Corpora: Innovative corpus approaches within and beyond linguistics. In English Language & Linguistics. Cambridge University Press. [in press] </div>
           <h2>Book Chapters</h2>
