--- a/APTIS_stats.html
+++ b/APTIS_stats.html
@@ -17,10 +17,8 @@
       <header id="header">
         <div class="inner">
           <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-          <h1><strong>PhD Student | Research Assistant | Associate Lecturer | Lancaster University </strong><br/>
-          <br />
-
-          </h1>
+            <h1><strong>Dr. Hanna Schmück <br>Research Associate | The University of Augsburg </strong><br />
+                <br /> </h1>
         </div>
       </header>
 
