--- a/OHOS.html
+++ b/OHOS.html
@@ -19,7 +19,7 @@
     <header id="header">
         <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
                     alt="" /></a>
-            <h1><strong>Research Associate | The University of Augsburg </strong><br />
+            <h1><strong>Dr. Hanna Schmück <br>Research Associate | The University of Augsburg </strong><br />
                 <br /> </h1>
         </div>
     </header> <!-- Main -->
