more images and conf map fixed

--- a/index.html
+++ b/index.html
@@ -489,9 +489,9 @@
                     </div>
                   </br>
 
-
                 <h4>ICAME 46 - 17.06.- 21.06.2025, Vilnius, Lithuania</h4>
-                <p> I had one full paper and a work in progress report accepted for ICAME 46 in
+                <p> <span class="image right"><img src="images/fulls/ICAME46.png" alt="Picture of Vilnius" /></span>
+                  I had one full paper and a work in progress report accepted for ICAME 46 in
                     Vilnius. The full paper is based on the evaluation study I did for the <i>Automatic Image Tagging for Corpus Linguistics Cambridge Element</i> with Paul Baker and Yufang Qian. 
                     The Work In Progress Report is based on shared work with Marc Alexander at Glasgow looking at transforming community archives 
                     (and specifically metadata) into coprora. </br>
@@ -514,7 +514,8 @@
 
                 <h4>CL2025 - 30.06.- 03.07.2025, Birmingham, UK</h4>
 
-                <p> I have presented a full paper with Marc Alexander at CL2025 in Birmingham.
+                <p> <span class="image left"><img src="images/fulls/CL2025.png" alt="Picture of Birmingham" /></span> </br>
+                  I have presented a full paper with Marc Alexander at CL2025 in Birmingham.
 
                       </p>
                       <button class="collapsible">Hidden in Plaintext: Transforming Archival Metadata into Corpora</button>
@@ -528,7 +529,8 @@
 
                    <h4>CMC 12 - 04.09.- 05.09.2025, Bayreuth, Germany </h4>
 
-                <p> I have presented a full paper at the 12th International Conference on CMC and Social Media Corpora for the Humanities (CMC-Corpora) in Bayreuth on work done with Michael Reder (Hochschule für Philosophie München), Katin Reder (TUM), and Annemarie Friedrich (University of Augsburg). Official Proceedings are forthcoming.
+                <p> <span class="image right"><img src="images/fulls/CMC12.png" alt="Picture of Bayreuth" /></span>
+                  I have presented a full paper at the 12th International Conference on CMC and Social Media Corpora for the Humanities (CMC-Corpora) in Bayreuth, Germany, on work done with Michael Reder (Hochschule für Philosophie München), Katin Reder (TUM), and Annemarie Friedrich (University of Augsburg). Official Proceedings are forthcoming.
 
                       </p>
                       <button class="collapsible">A Case Study on Annotating and Analysing Situation Entity Types in Reddit Discussions on Democracy</button>
