--- a/publications.html
+++ b/publications.html
@@ -35,6 +35,7 @@
           <h2>Journal Articles</h2>
           <div class="apa">Schmück, H. (2023). Review of Dunn (2022): Natural Language Processing for Corpus Linguistics. In International Journal of Corpus Linguistics. John Benjamins Publishing Company. https://doi.org/10.1075/ijcl.00057.sch </div>
           <div class="apa">Jung, Y., Gablasova, D., Brezina, V., & Schmück, H. (2024). Developing a coding scheme for annotating opinion statements in L2 interactive spoken English with application for language teaching and assessment. Research in Corpus Linguistics, 12(2), 146–173. https://doi.org/10.32714/ricl.12.02.07</div>
+          <div class="apa">Schmück, H. (2025). Sarah Buschfeld, Patricia Ronan, Theresa Neumaier, Andreas Weilinghoff and Lisa Westermayer (eds.), Crossing boundaries through corpora: Innovative corpus approaches within and beyond linguistics (Studies in Corpus Linguistics 119). Amsterdam and Philadelphia: John Benjamins, 2024. Pp vi + 265. ISBN 9789027215949. English Language and Linguistics, 1–6. doi:10.1017/S1360674325100439  </div>
           <hr class="rounded">
           <h2>Conferences & Proceedings</h2>
           <div class="apa">Schmück, H. Network visualisations of linguistic relationships in large datasets: A case study exploring the context of normal in British English. The 43rd Annual Conference of the International Computer Archive for Modern and Medieval English. 2022 </div>
@@ -54,12 +55,6 @@
           <h2>In press</h2>
           <h2>Proceedings</h2>
           <div class="apa">Schmück, H., Reder, M., Paula, K., & Friedrich, A. (2025, September 4-5). A case study on annotating and analysing situation entity types in Reddit discussions on democracy. In Proceedings of the 12th International Conference on CMC and Social Media Corpora for the Humanities (CMC-Corpora). University of Bayreuth. [in press] </div>
-          <h2>Book Chapters</h2>
-          <div class="apa">Brezina, V & Schmück, H. Corpus Linguistics and Learner Corpus Studies. In Nesi, H & Milin, P (Eds.) International Encyclopedia of Language and Linguistics (3rd ed.). Elsevier. [in press, expected publication date March 2026]</div>
-          <hr class="rounded">
-          
-          <h2>Journal Articles</h2>
-          <div class="apa">Schmück, H. Review of Buschfeld, Ronan, Neumaier, Weilinghoff & Westermayer (2023): Crossing Boundaries Through Corpora: Innovative corpus approaches within and beyond linguistics. In English Language & Linguistics. Cambridge University Press. [in press] </div>
           <h2>Book Chapters</h2>
           <div class="apa">Brezina, V & Schmück, H. Corpus Linguistics and Learner Corpus Studies. In Nesi, H & Milin, P (Eds.) International Encyclopedia of Language and Linguistics (3rd ed.). Elsevier. [in press, expected publication date March 2026]</div>
           <hr class="rounded">
