--- a/index.html
+++ b/index.html
@@ -585,12 +585,16 @@
                 <hr class="rounded">
                 <h2>Attended events (selection) </h2>
                 <span style="display:inline-block;">
-                <span style="width:15px;height:15px;border-radius:50%;background-color:#7b61a7bb;display:inline-block;"></span>
+                <span style="width:15px;height:15px;border-radius:50%;background-color:rgba(101, 94, 197, 0.55);display:inline-block;"></span>
                 Past Events
               </span>
               <span style="display:inline-block;margin-left:10px;">
-                <span style="width:15px;height:15px;border-radius:50%;background-color:rgba(255, 166, 0, 0.644);display:inline-block;"></span>
-                Future Events
+                <span style="width:15px;height:15px;border-radius:50%;background-color:rgba(203, 211, 56, 0.55);display:inline-block;"></span>
+                Planned Events
+              </span>
+              <span style="display:inline-block;margin-left:20px;">
+                <span style="width:15px;height:15px;border-radius:50%;background-color:rgba(53, 235, 68, 0.55);display:inline-block;"></span>
+                Wishlisted Events
               </span>
                 <iframe src="fun/conferencemap.html" width="100%" height="500" frameborder="0" scrolling="no"></iframe>
               
