--- a/publications.html
+++ b/publications.html
@@ -21,7 +21,7 @@
     <header id="header">
         <div class="inner"> <a href="https://hannaschmueck.github.io/" class="image avatar"><img src="images/avatar.jpg"
                     alt="" /></a>
-            <h1><strong>Dr. Hanna Schmück<br>
+            <h1><strong>Dr. Hanna Schmück<br />
               Research Associate | The University of Augsburg </strong><br />
                 <br /> </h1>
         </div>
