--- a/publications.html
+++ b/publications.html
@@ -69,7 +69,8 @@
           <hr class="rounded">
           
           <h2>Reviewing</h2>
-          <p>I have acted as a reviewer for:
+          <p></br>
+          I have acted as a reviewer for:
           <li><a href="https://www.euppublishing.com/loi/cor?widget=aboutthisjournal#de6dc34d-c714-4ed7-8457-32996500e695-58132d06-cf2f-4e31-a696-f4f2aa0cdd9a">The journal "Corpora" (EUP)</a></li>
           <li><a href="https://konvens.org/site/">Konferenz zur Verarbeitung natürlicher Sprache - KONVENS</a></li>
           <li><a href="https://aclanthology.org/venues/ranlp/">Recent Advances in Natural Language Processing - RANLP</a></li>
